# comfyui-auto-watermark-mask

./: .gitignore  README.md  __init__.py  auto_watermark_mask.py  custom_nodes.json  node_list.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
benchmark/: benchmark_node.py
examples/: auto_watermark_remover_basic.json
