[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-auto-watermark-mask"
version = "0.1.0"
description = "ComfyUI custom nodes for automatic watermark masking and direct removal with OpenCV, EasyOCR, and Big-LaMa."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "easyocr>=1.7.2",
  "opencv-python>=4.8",
  "spandrel>=0.4.1",
]

[tool.setuptools]
py-modules = ["auto_watermark_mask"]
