[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-auto-watermark-mask"
version = "0.2.2"
description = "ComfyUI custom nodes for automatic watermark masking and direct removal with OpenCV, EasyOCR, and Big-LaMa."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "easyocr>=1.7.2",
  "huggingface_hub>=0.30.0",
  "opencv-python>=4.8",
  "spandrel>=0.4.1",
]

[project.urls]
Repository = "https://github.com/goodguy1963/comfyui-auto-watermark-mask"

[tool.comfy]
PublisherId = "goodguy1963"
DisplayName = "ComfyUI Auto Watermark Mask"

[tool.setuptools]
py-modules = ["auto_watermark_mask"]
